Bug 253599 - Config "Default" buttons are not operative for blur and dashboard effects
Summary: Config "Default" buttons are not operative for blur and dashboard effects
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-08 16:32 UTC by Kai Uwe Broulik
Modified: 2012-04-13 19:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2010-10-08 16:32:47 UTC
Version:           unspecified
OS:                Linux

(I only tested it for the blur effect, may be applicable for other effects as well but I don‘t want to mess with my nice settings atm)

You can configure Blur effect‘s strength with a slider from Light to Strong. There is a button “Reset to default“ (German version, don‘t know the exact term) but this button has no effect what-so-ever.

Reproducible: Always
Comment 1 Kai Uwe Broulik 2010-10-08 16:33:04 UTC
Forgot to add: Kubuntu 10.04 with KDE 4.5.1
Comment 2 Kai Uwe Broulik 2010-12-10 23:46:01 UTC
This bug seems to be valid for all the desktop effects. (Why then offer the button in the first place?)
Comment 3 Thomas Lübking 2010-12-10 23:53:36 UTC
true for blur, but not for eg. present windows, desktop grid, wobbly windows, magnifier, mouse mark, and i frankly stopped testing, since none of those i tried had this issue, so could you please be a little more specific?
Comment 4 Kai Uwe Broulik 2010-12-10 23:58:40 UTC
Okay, didn‘t test it for all of them. I noticed it at Blur effect and Dashboard effect. Sorry. (I first thought it were the effects added since 4.5 but the Resize windows effect does respect the button)
Comment 5 Martin Flöser 2011-03-17 19:08:31 UTC
Git commit 675f3657d9f7fd2d1987506bfa73eee1b39d8acb by Martin Gräßlin.
Committed on 17/03/2011 at 19:10.
Pushed by graesslin into branch 'KDE/4.6'.

Implement default handler in Dashboard config

BUG: 253599
FIXED-IN: 4.6.2

M  +6    -2    kwin/effects/dashboard/dashboard_config.cpp     

http://commits.kde.org/kde-workspace/675f3657d9f7fd2d1987506bfa73eee1b39d8acb
Comment 6 Martin Flöser 2011-03-17 19:11:53 UTC
Git commit 7ec5a65223c1c8fdbc0cf41eeda1573c7c85d11c by Martin Gräßlin.
Committed on 17/03/2011 at 19:14.
Pushed by graesslin into branch 'master'.

Implement default handler in Dashboard config

Sorry for doing a second commit - 4.6 and master had diverged.
CCBUG: 253599

M  +4    -0    kwin/effects/dashboard/dashboard_config.cpp     

http://commits.kde.org/kde-workspace/7ec5a65223c1c8fdbc0cf41eeda1573c7c85d11c
Comment 7 Martin Flöser 2012-04-13 19:22:43 UTC
Bulk change: move all KWin kcm bugs to product kwin