Implement default handler in Dashboard config

BUG: 253599
FIXED-IN: 4.6.2